Modification des endpoints et update du openapi
